--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,11 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: instal project
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - run: npm install
       - name: Check out the repository
         uses: actions/checkout@v1
       - name: Run tests
