--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,13 +18,16 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    name: Run Tests Across Node.js Versions and Operating Systems
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        node: [8, 10, 12]
     steps:
-      - name: instal project
-      - uses: actions/setup-node@v2
-      - run: npm install
+      - uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
       - name: Check out the repository
         uses: actions/checkout@v1
       - name: Run tests
