--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,8 +22,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        node: [8, 10, 12]
+        os: [ubuntu-latest]
+        node: [14]
     steps:
       - uses: actions/setup-node@v1
         with:
