--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,10 +35,10 @@ jobs:
         uses: DevExpress/testcafe-action@latest
         with:
           args: "testcafe chrome tests -r allure"
-      -name: Generate allure report
+      - name: Generate allure report
       - run: allure generate allure/allure-results --clean -o allure/allure-report && allure open allure/allure-report
-      - name: 🎁 Step 6 - Publishing Allure artifact to GitHub Actions
-          uses: actions/upload-artifact@v2
-          with:
-            name: allure-report
-            path: allure-report
+      - name: Step 6 - Publishing Allure artifact to GitHub Actions
+        uses: actions/upload-artifact@v2
+        with:
+          name: allure-report
+          path: allure-report
