--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Generate allure report
       - run: allure generate allure
       - name: Publishing Allure artifact to GitHub Actions
-        uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v2
         with:
           name: allure-report
           path: allure-report
