--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,9 +32,9 @@ jobs:
       - name: npm install
       - run: npm install
       - name: Check out the repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: Run tests
-        uses: DevExpress/testcafe-action@latest
+      - uses: DevExpress/testcafe-action@latest
         with:
           args: "testcafe chrome tests -r allure"
       - name: Generate allure report
