--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,21 +26,21 @@ jobs:
         node: [14]
     steps:
       - name: set up node
-      - uses: actions/setup-node@v2
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
       - name: npm install
-      - run: npm install
+        run: npm install
       - name: Check out the repository
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: Run tests
-      - uses: DevExpress/testcafe-action@latest
+        uses: DevExpress/testcafe-action@latest
         with:
           args: "testcafe chrome tests -r allure"
       - name: Generate allure report
-      - run: allure generate allure
+        run: allure generate allure
       - name: Publishing Allure artifact to GitHub Actions
-      - uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
           name: allure-report
           path: allure-report
