--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Run tests
         uses: DevExpress/testcafe-action@latest
         with:
-          args: "testcafe chrome tests -r allure"
+          args: "chrome tests -r allure"
       - name: Generate allure report
         run: allure generate allure
       - name: Publishing Allure artifact to GitHub Actions
