--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,10 +37,29 @@ jobs:
         uses: DevExpress/testcafe-action@latest
         with:
           args: "chrome tests -r allure"
-      - name: Generate allure report
-        run: allure generate allure
-      - name: Publishing Allure artifact to GitHub Actions
-        uses: actions/upload-artifact@v2
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
         with:
-          name: allure-report
-          path: allure-report
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        #id: allure-report
+        with:
+          allure_results: allure-results
+          #gh_pages: gh-pages
+          #allure_report: allure-report
+          allure_history: allure-history
+          keep_reports: 20
+
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
