--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,10 +50,10 @@ jobs:
         if: always()
         id: allure-report
         with:
-          allure_results: allure-results
+          allure_results: allure/allure-results
           gh_pages: gh-pages
-          allure_report: allure-report
-          allure_history: allure-history
+          allure_report: allure/allure-report
+          allure_history: allure/allure-history
           keep_reports: 20
 
       - name: Deploy report to Github Pages
@@ -62,7 +62,7 @@ jobs:
         env:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
+          PUBLISH_DIR: allure/allure-history
       - name: Post the link to the report
         if: always()
         uses: Sibz/github-status-action@v1
