--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,16 +44,15 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages
-
-      - name: Allure Report action from marketplace
+      - name: Test marketplace action
         uses: simple-elf/allure-report-action@master
         if: always()
         id: allure-report
         with:
-          allure_results: allure/allure-results
+          allure_results: allure-results
           gh_pages: gh-pages
-          allure_report: allure/allure-report
-          allure_history: allure/allure-history
+          allure_report: allure-report
+          allure_history: allure-history
           keep_reports: 20
 
       - name: Deploy report to Github Pages
@@ -62,13 +61,33 @@ jobs:
         env:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure/allure-history
-      - name: Post the link to the report
-        if: always()
-        uses: Sibz/github-status-action@v1
-        with:
-          authToken: ${{secrets.GITHUB_TOKEN}}
-          context: 'Test report'
-          state: 'success'
-          sha: ${{github.event.pull_request.head.sha || github.sha}}
-          target_url:  https://simple-elf.github.io/github-allure-history/${{ github.run_number }}
+          PUBLISH_DIR: allure-history
+          
+
+#       - name: Allure Report action from marketplace
+#         uses: simple-elf/allure-report-action@master
+#         if: always()
+#         id: allure-report
+#         with:
+#           allure_results: allure/allure-results
+#           gh_pages: gh-pages
+#           allure_report: allure/allure-report
+#           allure_history: allure/allure-history
+#           keep_reports: 20
+
+#       - name: Deploy report to Github Pages
+#         if: always()
+#         uses: peaceiris/actions-gh-pages@v2
+#         env:
+#           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           PUBLISH_BRANCH: gh-pages
+#           PUBLISH_DIR: allure/allure-history
+#       - name: Post the link to the report
+#         if: always()
+#         uses: Sibz/github-status-action@v1
+#         with:
+#           authToken: ${{secrets.GITHUB_TOKEN}}
+#           context: 'Test report'
+#           state: 'success'
+#           sha: ${{github.event.pull_request.head.sha || github.sha}}
+#           target_url:  https://simple-elf.github.io/github-allure-history/${{ github.run_number }}
