--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,6 +37,12 @@ jobs:
         uses: DevExpress/testcafe-action@latest
         with:
           args: "chrome tests -r allure"
+      - uses: actions/upload-artifact@master
+        with:
+          name: allure-results
+          path: allure-results
+          retention-days: 20
+        
       - name: Get Allure history
         uses: actions/checkout@v2
         if: always()
@@ -44,6 +50,7 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages
+    
       - name: Test marketplace action
         uses: simple-elf/allure-report-action@master
         if: always()
