--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,10 +37,10 @@ jobs:
         uses: DevExpress/testcafe-action@latest
         with:
           args: "chrome tests -r allure"
-      - uses: actions/upload-artifact@master
+      - uses: actions/upload-artifact@v2
         with:
           name: allure-results
-          path: allure-results
+          path: allure/allure-results
           retention-days: 20
         
       - name: Get Allure history
@@ -59,7 +59,7 @@ jobs:
           allure_results: allure-results
           gh_pages: gh-pages
           allure_report: allure-report
-          allure_history: allure-history
+          allure_history: allure/allure-history
           keep_reports: 20
 
       - name: Deploy report to Github Pages
@@ -69,4 +69,3 @@ jobs:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
-          
