--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,12 +37,6 @@ jobs:
         uses: DevExpress/testcafe-action@latest
         with:
           args: "chrome tests -r allure"
-      - uses: actions/upload-artifact@v2
-        with:
-          name: allure-results
-          path: allure/allure-results
-          retention-days: 20
-        
       - name: Get Allure history
         uses: actions/checkout@v2
         if: always()
@@ -50,15 +44,15 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages
-    
-      - name: Test marketplace action
+
+      - name: Allure Report action from marketplace
         uses: simple-elf/allure-report-action@master
         if: always()
         id: allure-report
         with:
-          allure_results: allure-results
+          allure_results: allure/allure-results
           gh_pages: gh-pages
-          allure_report: allure-report
+          allure_report: allure/allure-report
           allure_history: allure/allure-history
           keep_reports: 20
 
@@ -68,4 +62,13 @@ jobs:
         env:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
+          PUBLISH_DIR: allure/allure-history
+      - name: Post the link to the report
+        if: always()
+        uses: Sibz/github-status-action@v1
+        with:
+          authToken: ${{secrets.GITHUB_TOKEN}}
+          context: 'Test report'
+          state: 'success'
+          sha: ${{github.event.pull_request.head.sha || github.sha}}
+          target_url:  https://simple-elf.github.io/github-allure-history/${{ github.run_number }}
